feat: new update in notebook

--- a/Electricity_Production_By_Source.ipynb
+++ b/Electricity_Production_By_Source.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "212b664a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "3191a46d",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "352593ab",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,15 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6aedfded",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((6241, 11),\n",
-       " Index(['Entity', 'Code', 'Year', 'Electricity_from_coal_TWh',\n",
+       "((6241, 11), Index(['Entity', 'Code', 'Year', 'Electricity_from_coal_TWh',\n",
        "        'Electricity_from_gas_TWh', 'Electricity_from_hydro_TWh',\n",
        "        'Electricity_from_other_renewables_TWh', 'Electricity_from_solar_TWh',\n",
        "        'Electricity_from_oil_TWh', 'Electricity_from_wind_TWh',\n",
@@ -57,7 +52,7 @@
        "       dtype='object'))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +63,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14de8da5",
    "metadata": {},
    "source": [
     "<ul>\n",
@@ -88,8 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "e7f60a18",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "electricity_producion = electricity_producion.reindex( list(electricity_producion['Entity']) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -114,6 +116,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Entity</th>\n",
+       "      <th>Code</th>\n",
        "      <th>Year</th>\n",
        "      <th>Electricity_from_coal_TWh</th>\n",
        "      <th>Electricity_from_gas_TWh</th>\n",
@@ -129,6 +132,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
        "      <td>2000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.155</td>\n",
@@ -142,6 +146,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
        "      <td>2001</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.094</td>\n",
@@ -155,6 +160,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
        "      <td>2002</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.132</td>\n",
@@ -168,6 +174,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
        "      <td>2003</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.309</td>\n",
@@ -181,6 +188,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
        "      <td>2004</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.329</td>\n",
@@ -196,36 +204,43 @@
        "</div>"
       ],
       "text/plain": [
-       "        Entity  Year  Electricity_from_coal_TWh  Electricity_from_gas_TWh  \\\n",
-       "0  Afghanistan  2000                        0.0                     0.155   \n",
-       "1  Afghanistan  2001                        0.0                     0.094   \n",
-       "2  Afghanistan  2002                        0.0                     0.132   \n",
-       "3  Afghanistan  2003                        0.0                     0.309   \n",
-       "4  Afghanistan  2004                        0.0                     0.329   \n",
+       "        Entity Code  Year  Electricity_from_coal_TWh  \\\n",
+       "0  Afghanistan  AFG  2000                        0.0   \n",
+       "1  Afghanistan  AFG  2001                        0.0   \n",
+       "2  Afghanistan  AFG  2002                        0.0   \n",
+       "3  Afghanistan  AFG  2003                        0.0   \n",
+       "4  Afghanistan  AFG  2004                        0.0   \n",
        "\n",
-       "   Electricity_from_hydro_TWh  Electricity_from_other_renewables_TWh  \\\n",
-       "0                       0.312                                    0.0   \n",
-       "1                       0.498                                    0.0   \n",
-       "2                       0.555                                    0.0   \n",
-       "3                       0.630                                    0.0   \n",
-       "4                       0.565                                    0.0   \n",
+       "   Electricity_from_gas_TWh  Electricity_from_hydro_TWh  \\\n",
+       "0                     0.155                       0.312   \n",
+       "1                     0.094                       0.498   \n",
+       "2                     0.132                       0.555   \n",
+       "3                     0.309                       0.630   \n",
+       "4                     0.329                       0.565   \n",
        "\n",
-       "   Electricity_from_solar_TWh  Electricity_from_oil_TWh  \\\n",
-       "0                         0.0                       0.0   \n",
-       "1                         0.0                       0.0   \n",
-       "2                         0.0                       0.0   \n",
-       "3                         0.0                       0.0   \n",
-       "4                         0.0                       0.0   \n",
+       "   Electricity_from_other_renewables_TWh  Electricity_from_solar_TWh  \\\n",
+       "0                                    0.0                         0.0   \n",
+       "1                                    0.0                         0.0   \n",
+       "2                                    0.0                         0.0   \n",
+       "3                                    0.0                         0.0   \n",
+       "4                                    0.0                         0.0   \n",
        "\n",
-       "   Electricity_from_wind_TWh  Electricity_from_nuclear_TWh  \n",
-       "0                        0.0                           0.0  \n",
-       "1                        0.0                           0.0  \n",
-       "2                        0.0                           0.0  \n",
-       "3                        0.0                           0.0  \n",
-       "4                        0.0                           0.0  "
+       "   Electricity_from_oil_TWh  Electricity_from_wind_TWh  \\\n",
+       "0                       0.0                        0.0   \n",
+       "1                       0.0                        0.0   \n",
+       "2                       0.0                        0.0   \n",
+       "3                       0.0                        0.0   \n",
+       "4                       0.0                        0.0   \n",
+       "\n",
+       "   Electricity_from_nuclear_TWh  \n",
+       "0                           0.0  \n",
+       "1                           0.0  \n",
+       "2                           0.0  \n",
+       "3                           0.0  \n",
+       "4                           0.0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +252,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "cc5e3bf3",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +398,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a194dc3",
    "metadata": {},
    "source": [
     "## Limpando os Dados"
@@ -392,7 +405,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e6bef49",
    "metadata": {},
    "source": [
     "### Preenchendo os nulos"
@@ -401,23 +413,22 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6e010514",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((6241, 10),\n",
-       " Entity                                   0\n",
-       " Year                                     0\n",
-       " Electricity_from_coal_TWh                0\n",
-       " Electricity_from_gas_TWh                 0\n",
-       " Electricity_from_hydro_TWh               0\n",
-       " Electricity_from_other_renewables_TWh    0\n",
-       " Electricity_from_solar_TWh               0\n",
-       " Electricity_from_oil_TWh                 0\n",
-       " Electricity_from_wind_TWh                0\n",
-       " Electricity_from_nuclear_TWh             0\n",
+       "((6241, 11), Entity                                      0\n",
+       " Code                                      767\n",
+       " Year                                        0\n",
+       " Electricity_from_coal_TWh                1020\n",
+       " Electricity_from_gas_TWh                 1020\n",
+       " Electricity_from_hydro_TWh                  0\n",
+       " Electricity_from_other_renewables_TWh      35\n",
+       " Electricity_from_solar_TWh                  0\n",
+       " Electricity_from_oil_TWh                 1020\n",
+       " Electricity_from_wind_TWh                   0\n",
+       " Electricity_from_nuclear_TWh                0\n",
        " dtype: int64)"
       ]
      },
@@ -433,7 +444,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "51f12303",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +478,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e4194296",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +495,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "02bbaf8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +505,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5a74708b",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +686,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "024f7049",
    "metadata": {},
    "outputs": [
     {
@@ -944,30 +950,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21ca2f17",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "id": "df49a238",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mask = electricity_producion.isnull().any(axis=1)\n",
-    "#electricity_producion[mask].Code.head(200)\n",
-    "\n",
-    "#electricity_producion.iloc[:,3:].describe()\n",
-    "\n",
-    "#electricity_producion.Entity.value_counts(dropna=True)"
+    "!pip install mito"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mitosheet'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-8e390680fcb2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mmitosheet\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mmitosheet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msheet\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'mitosheet'"
+     ]
+    }
+   ],
+   "source": [
+    "import mitosheet\n",
+    "mitosheet.sheet()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "c3713fc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +992,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d1a29c82",
    "metadata": {
     "scrolled": false
    },
@@ -991,7 +1003,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c3fe5359",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +1012,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ab9e952b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1022,6 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "60c83809",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1032,6 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "48bdae38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1080,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
